--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 * {
     box-sizing: border-box;
     transition: .3s all;
+    border: 1px solid red;
 }
 
 a {
@@ -285,7 +286,7 @@ body {
 
                 a {
                     color: $white;
-                    font-size: 20px;
+                    font-size: 17px;
                     font-weight: 700;
                     line-height: 48px;
 
