--- a/css/mobile.css
+++ b/css/mobile.css
@@ -31,45 +31,49 @@
       grid-column-end: 2;
       -ms-grid-row: 5;
       grid-row-start: 5; }
-    .main .about .about__photo {
+    .main .about .about__photograph {
       background-color: #3624ea;
       -ms-grid-row: 6;
       grid-row-start: 6;
       -ms-flex-line-pack: center;
       align-content: center; }
-      .main .about .about__photo .photo {
-        left: 0%; }
-    .main .about .about__text-photo {
+      .main .about .about__photograph .photo {
+        left: 0px;
+        width: 95%; }
+    .main .about .about__photograph-text {
       text-align: center;
       -ms-grid-row: 7;
       grid-row-start: 7;
       -ms-grid-column: 1;
       grid-column-start: 1;
       -ms-grid-column-span: 1;
-      grid-column-end: 2;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center; }
-      .main .about .about__text-photo .text__title {
+      grid-column-end: 2; }
+      .main .about .about__photograph-text .text__title {
         margin: 0;
         max-width: 90%;
         font-size: 6vw; }
-      .main .about .about__text-photo .text {
+      .main .about .about__photograph-text .text {
         max-width: 90%;
         font-size: 4vw; }
-      .main .about .about__text-photo .text__link {
+      .main .about .about__photograph-text .text__link {
         margin: 2%;
         width: 300px; }
-  .main .contact .contact__text {
-    -ms-grid-columns: 100%;
-    grid-template-columns: 100%;
-    -ms-grid-rows: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    max-width: 97%; }
-    .main .contact .contact__text .text {
-      text-align: center; }
-  .footer .footer__menu {
-    width: 100%;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; } }
+  .contact {
+    height: 1700px !important;
+    width: 100%; }
+    .contact .contact__text {
+      -ms-grid-columns: 1fr !important;
+      grid-template-columns: 1fr !important;
+      -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      max-width: 90%; }
+      .contact .contact__text .text__title {
+        font-size: 11vw !important; }
+      .contact .contact__text .text {
+        text-align: center; } }
+
+.footer .footer__menu {
+  width: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
