--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,8 @@ body {
     align-content: end;
     background-color: #fff; }
     .main .about .about__photograph .photo {
-      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
       position: relative;
       left: 20%; }
   .main .about .about__photograph-text {
@@ -167,8 +168,7 @@ body {
     .main .about .about__photograph-text .text__title {
       color: #ffffff;
       font-size: 2.64vw;
-      font-weight: 700;
-      line-height: 102.97px; }
+      font-weight: 700; }
     .main .about .about__photograph-text .text {
       color: #ffffff;
       max-width: 712px;
@@ -252,7 +252,7 @@ body {
   height: 385px;
   background: #000; }
   .footer .footer__menu {
-    width: 525px; }
+    width: 605px; }
     .footer .footer__menu .menu__links {
       padding: 0;
       display: -ms-grid;
@@ -263,7 +263,7 @@ body {
       -ms-flex-pack: justify;
       justify-content: space-between; }
       .footer .footer__menu .menu__links .link {
-        margin: 0 2%;
+        margin: 0;
         text-align: center; }
         .footer .footer__menu .menu__links .link a {
           color: #ffffff;
